# scraping-template

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  Makefile  README.md  constants.py  main.py  models.py  pyproject.toml  requirements.txt  sample.env
.github/workflows/: docker-ghcr.yml  ruff.yml
api/: route.py  route1.py
samples/: test-upload.py
tests/: test_api_route.py  test_http_requests.py  test_redis_cache.py
utils/: __init__.py  csv_writer.py  exceptions.py  file_exporter.py  http_requests.py  log.py  multi_threaded.py  otel.py  redis_cache.py  settings.py
