[project]
name = "scraping-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "black>=25.9.0",
    "boto3>=1.40.70",
    "httpx>=0.28.1",
    "opentelemetry-distro>=0.59b0",
    "opentelemetry-exporter-gcp-logging>=1.11.0a0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "opentelemetry-instrumentation-boto>=0.59b0",
    "opentelemetry-instrumentation-botocore>=0.59b0",
    "opentelemetry-instrumentation-logging>=0.59b0",
    "opentelemetry-instrumentation-redis>=0.59b0",
    "opentelemetry-instrumentation-requests>=0.59b0",
    "opentelemetry-instrumentation-sqlite3>=0.59b0",
    "pydantic>=2.12.4",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "undetected-chromedriver>=3.5.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "fakeredis>=2.23.0",
    "pluggy>=1.5.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.32.1",
    "pytest>=9.0.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = "."
